# OMFL-parser

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  parser.cpp  parser.h
lib/variables/: ArrayVariable.h  BoolVariable.h  FloatVariable.h  IVariable.h  IntVariable.h  Root.h  SectionVariable.h  StringVariable.h
tests/: test_format.cpp  test_parser.cpp
